gccida/c1/check_asm_stack_operands
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_asm_stack_operands/src/reg-stack.c:1081:4: error: expected ';' after expression
rtx v20; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_asm_stack_operands/src/reg-stack.c:1081:5: error: use of undeclared identifier 'v20'
rtx v20; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_asm_stack_operands/src/reg-stack.c:1087:4: error: expected ';' after expression
rtx v26; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_asm_stack_operands/src/reg-stack.c:1087:5: error: use of undeclared identifier 'v26'
rtx v26; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_asm_stack_operands/src/reg-stack.c:1097:6: error: use of undeclared identifier 'clobber_reg'
rtx *clobber_reg; // [rsp+88h] [rbp-48h] 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_asm_stack_operands/src/reg-stack.c:1102:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v2 = (  struct rtx_def *)insn[2]; 
                         ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_asm_stack_operands/src/reg-stack.c:1111:14: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
n_operands = recog_data_0.n_operands; 
             ^~~~~~~~~~~~
             recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_asm_stack_operands/src/reg-stack.c:1112:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v36 = recog_data_0.n_operands; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_asm_stack_operands/src/reg-stack.c:1113:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.n_operands > 0 ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_asm_stack_operands/src/reg-stack.c:1118:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v7 = recog_data_0.operand[v6]; 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_asm_stack_operands/src/reg-stack.c:1123:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[v6] = rtx; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_asm_stack_operands/src/reg-stack.c:1134:1: error: use of undeclared identifier 'clobber_reg'
clobber_reg = 0LL; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_asm_stack_operands/src/reg-stack.c:1139:1: error: use of undeclared identifier 'clobber_reg'
clobber_reg = ( rtx *)&reg_used_as_output[-( ( 8 * v12 + 15) & 0xFFFFFFFFFFFFFFF0LL)]; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_asm_stack_operands/src/reg-stack.c:1139:22: error: expected expression
clobber_reg = ( rtx *)&reg_used_as_output[-( ( 8 * v12 + 15) & 0xFFFFFFFFFFFFFFF0LL)]; 
                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_asm_stack_operands/src/reg-stack.c:1163:1: error: use of undeclared identifier 'clobber_reg'
clobber_reg[v15++] = v17; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_asm_stack_operands/src/reg-stack.c:1177:1: error: use of undeclared identifier 'v20'
v20 = recog_data_0.operand[v19]; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_asm_stack_operands/src/reg-stack.c:1177:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v20 = recog_data_0.operand[v19]; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_asm_stack_operands/src/reg-stack.c:1178:17: error: use of undeclared identifier 'v20'
if ( *( _WORD *)v20 != 61 ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_asm_stack_operands/src/reg-stack.c:1180:9: error: use of undeclared identifier 'v20'; did you mean 'v2'?
rtint = v20->fld[0].rtint; 
        ^~~
        v2
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_asm_stack_operands/src/reg-stack.c:1063:18: note: 'v2' declared here
 struct rtx_def *v2; // r14 
                 ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_asm_stack_operands/src/obj/reg-stack.o] Error 1
